assets/css/styles.css
/* ... */
@media screen and (max-width: 428px) {
  input[type="text"],
  input[type="email"],
  textarea {
    font-size: 14px;
  }

  input[type="text"],
  input[type="email"] {
    width: 100%;
  }
}

@media screen and (max-width: 372px) {
  input[type="text"],
  input[type="email"],
  textarea {
    font-size: 12px;
  }
}

/* Navigation bar */

nav {
  display: flex;
  background-color: var(--color-accent);
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  z-index: 2;
}

.nav__component {
  display: flex;
  align-items: center;
}

.nav__logo {
  height: 140px;
  width: 140px;
  border-radius: 50%;
  padding: 5px;
}

.nav__logo--small {
  display: none;
}

nav li {
  list-style: none;
  padding: 20px;
}

li > a {
  color: var(--color-primary);
  transition: color 0.3s;
  font-size: 28px;
}

li i {
  fill: var(--color-primary);
}

li > a:hover,
li > a:hover i {
  color: var(--color-secondary);
  fill: var(--color-secondary);
}

li > .active {
  font-weight: 900;
}

.nav__component > .instagram-link {
  margin-right: 60px;
}

.instagram-link > i {
  font-size: 50px;
  color: var(--color-secondary);
  transition: color 0.3s;
}

.instagram-link > i:hover {
  color: var(--color-primary);
}

.instagram-link {
  position: relative;
}

.instagram-link::before,
.instagram-link::after {
  --scale: 0;
  position: absolute;
  left: 50%;
  font-size: 12px;
  transform: translateX(-50%) translateY(180%) scale(var(--scale));
  transition: 0.2s transform;
  transform-origin: top center;
  z-index: 1;
}

.instagram-link::before {
  content: attr(data-instagram-tooltip);
  color: var(--color-accent);
  background: var(--color-primary);
  border-radius: 0.3rem;
  padding: 0.5rem;
  opacity: 0.5;
  text-align: center;
  width: max-content;
}

.instagram-link:hover::before {
  --scale: 1;
}

.collapsible__toggler > i {
  display: none;
}

.collapsible__content {
  width: 100%;
  display: none;
}

.collapsible__toggler {
  cursor: pointer;
}

ul > .nav__item {
  text-align: left;
  border-bottom: 0.5px solid var(--color-border);
}

.nav__item i {
  font-size: 16px;
}

@media screen and (max-width: 1024px) {
  nav li {
    padding: 15px;
  }

  li > a {
    font-size: 20px;
  }

  .nav__logo {
    height: 120px;
    width: 120px;
  }

  .nav__component > .instagram-link {
    margin-right: 50px;
  }

  .instagram-link > i {
    font-size: 40px;
  }

  .instagram-link::before,
  .instagram-link::after {
    font-size: 12px;
    transform: translateX(-50%) translateY(100%) scale(var(--scale));
  }

  .instagram-link::before {
    width: 100px;
  }
}

@media screen and (max-width: 768px) {
  nav li {
    padding: 0;
  }

  .nav__component {
    display: flex;
  }

  .nav__logo {
    display: none;
  }

  .nav__component > .instagram-link {
    margin-right: 20px;
  }

  .nav__logo--small {
    display: inline;
    height: 80px;
    width: 80px;
    padding: 10px;
  }

  .nav__menu {
    display: none;
  }

  .instagram-link::before,
  .instagram-link::after {
    display: none;
  }

  .collapsible__toggler > i {
    font-size: 40px;
    color: var(--color-secondary);
    transition: 0.3s;
  }

  .collapsible__toggler > i:hover {
    color: var(--color-primary);
  }

  .nav__component > .collapsible__toggler {
    margin-right: 20px;
  }

  .collapsible__toggler > i {
    display: inline-block;
  }

  .collapsible__content {
    display: block;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s;
  }

  .collapsible__content.collapsible--expanded {
    max-height: 100vh;
  }

  .collapsible__toggler {
    position: relative;
    background: var(--color-accent);
  }

  .nav__item {
    display: flex;
    align-items: center;
  }

  .nav__item > a {
    display: block;
    padding: 15px;
    width: 100%;
  }
}

@media screen and (max-width: 428px) {
  .nav__logo--small {
    height: 60px;
    width: 60px;
  }

  li > a {
    font-size: 16px;
  }

  .nav__component > .instagram-link {
    margin-right: 15px;
  }

  .nav__component > .collapsible__toggler {
    margin-right: 15px;
  }

  .nav__item > a {
    padding: 12px;
  }
}

@media screen and (max-width: 376px) {
  .nav__component > .instagram-link {
    margin-right: 12px;
  }

  .nav__component > .collapsible__toggler {
    margin-right: 12px;
  }

  .instagram-link > i {
    font-size: 30px;
  }

  .collapsible__toggler > i {
    font-size: 30px;
  }
}

/* Hero image */

.hero-wrapper {
  overflow: hidden;
}

.hero__container {
  overflow: hidden;
  height: 90vh;
  width: 100%;
  background-image: url(../images/hero-image.webp);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  animation: hero-zoom 2s ease-in-out forwards;
  display: flex;
  align-items: center;
  justify-content: center;
}

@keyframes hero-zoom {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(1.1);
  }
}

.hero__heading {
  width: 600px;
  animation: fade-in 2s ease-in-out forwards;
  background: rgba(114, 43, 179, 0.35);
  padding: 40px 0;
  border-radius: var(--border-radius);
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@media screen and (max-width: 1024px) {
  .hero__container {
    background-image: url(../images/hero-image-medium.webp);
  }

  .hero__heading {
    margin: 16px;
    width: 520px;
  }
}

@media screen and (max-width: 768px) {
  .hero__heading {
    margin: 12px;
    width: 360px;
  }
}

@media screen and (max-width: 428px) {
  .hero__container {
    background-image: url(../images/hero-image-small.webp);
  }

  .hero__heading {
    margin: 10px;
    width: 240px;
    padding: 30px 0;
  }
}

@media screen and (max-width: 372px) {
  .hero__heading {
    padding: 20px 0;
  }
}

/* Testimonials block */

.testimonials__card {
  background: var(--block-grey);
  color: var(--color-body);
  font-family: "Playfair Display", Arial, Helvetica, sans-serif;
  font-size: 85%;
  font-weight: bold;
  position: relative;
  height: 300px;
}
/* ... */

